syntax = "proto2";

package com.jin.protobuf;

option optimize_for = SPEED;
option java_package = "com.jin.protobuf";
option java_outer_classname = "MyDataInfo";

message MyMessage {
    enum DataType {
         PersonType = 1;
         CatType = 2;
         DogType = 3;
    }

    required DataType data_type  = 1;

    oneof dataBody{
        Person person = 2;
        Cat cat = 3;
        Dog dog = 4;
    }
}

message Person {
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Cat {
    optional string name = 1;
    optional int32 age = 2;
}

message Dog {
    optional string name = 1;
    optional string city = 2;
}

